infrastructure/environments/development/general/rabbitmq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: dev
  labels:
    app: rabbitmq
    tier: gateway
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 30s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 20s
    nginx.ingress.kubernetes.io/client-max-body-size: 2m
    nginx.ingress.kubernetes.io/client-body-buffer-size: 2m
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/limit-rps: "5" # 5 request/second/ip
    # nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: rabbitmq-dev.review-site.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
